Hopefully fixes iOS "jump to top" issue #7

--- a/less/scaffolding.less
+++ b/less/scaffolding.less
@@ -6,6 +6,13 @@
 // Body reset
 // -------------------------
 
+html, body {
+  height: 100%; 
+  overflow: auto; 
+  margin: 0;
+  -webkit-overflow-scrolling: touch;
+}
+
 body {
   margin: 0;
   font-family: @baseFontFamily;
